--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   backend:
     build: .
@@ -7,10 +9,10 @@ services:
       - "8000:8000"
     depends_on:
       - db
-    # We force the Database URL here so it cannot be missed
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/kasparro
-    command: python -m uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    env_file:
+      - .env
+    # FIX: Removed --reload for production readiness
+    command: python -m uvicorn app.main:app --host 0.0.0.0 --port 8000
 
   db:
     image: postgres:15-alpine
